syntax= "proto3";
package monitor.proto;

message CpuLoad{
    //CPU 1分钟，5分钟，15分钟平均负载
    float load_avg_1 = 1; 
    float load_avg_5 = 2;
    float load_avg_15 = 3;
}